--- a/models/templates/kf-4-directions-1D-gaze.yaml
+++ b/models/templates/kf-4-directions-1D-gaze.yaml
@@ -14,7 +14,7 @@ signals:
   target_pos:
     shape: 2
     dtype: float32
-    
+
   target_size:
     shape: 2
     dtype: float32
@@ -26,17 +26,17 @@ signals:
   game_state:
     shape: 1 # use "shape: ()"?
     dtype: int8
-  
+
   # warning: this is a bipartite buffer.
   # indexing starts at ().shape[0] // 2
   eegbuffersignal:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
-  
+
   databuffer:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
-  
+
   # Index within eegbuffersignal to put new data,
   # NOT position of most recent data. Subtract 1 for most recent
   # Should never be less than half of eegbuffersignal.shape[0]
@@ -44,16 +44,16 @@ signals:
   eegbufferindex:
     shape: 1
     dtype: int16
-    
+
   v_decoded:
     shape: 2
     dtype: float32
-  
+
   # can be class probabilities or velocity
   decoder_output:
     shape: 5
     dtype: float32
-  
+
   # signals needed for decoder_hidden and kf_clda
   kf_state:
     shape: (7,)
@@ -137,11 +137,11 @@ signals:
   numEEGSamples:
     shape: 1
     dtype: int16
-    
+
   totalValidEEGSamples:
     shape: 1
     dtype: int64
-  
+
   # task variables to log
   sessionLength:
     shape: 1
@@ -214,7 +214,6 @@ group_params:
     params:
       # &dt_ reference is NECESSARY, otherwise it will be a silent bug in SJ-4-directions/kf-4-directions.
       dt: &dt_ 50000 # in microseconds
-    
 
 modules:
   # WARNING: make sure you have an exit condition when using loop: False
@@ -229,13 +228,13 @@ modules:
       connections:
         local: # connection_name. should only have 1. Not sure why this level is here.
           task: # stream_name
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7703
 
   timer:
@@ -250,7 +249,7 @@ modules:
       timer_type: hybrid # pygame or sleep
       #dt: 20000 # in microseconds.
       verbose: True
-  
+
   recv_gaze_buffer:
     constructor: True
     destructor: True
@@ -276,9 +275,8 @@ modules:
       - totalValidEEGSamples
     trigger: False
     params:
-      IP: '127.0.0.1'
-      PORT: 7779
-  
+      serial_port: /dev/ttyUSB0
+
   filterEEG:
     constructor: True
     destructor: False
@@ -291,7 +289,7 @@ modules:
       - totalValidEEGSamples
     out:
       - databuffer
-      
+
   decoder_hidden:
     constructor: True
     sync:
@@ -316,7 +314,7 @@ modules:
       data_preprocessor:
         online_status: online
         normalizer_type: welfords
-  
+
   kf_clda:
     constructor: True
     destructor: True
@@ -405,7 +403,7 @@ modules:
     params:
       sessionLength: 1200 # seconds # 1300 > 1280 = 2 * (16 + 2 + 2) * 32
       fullScreen: False
-      screenSize: [700,700] # w,h
+      screenSize: [700, 700] # w,h
       objScale: 0.001 # 1/1000
       cursorRadius: 10
       cursorVel: [0.015, 0.015] # max is 1 (0~1)
@@ -427,8 +425,8 @@ modules:
       useCmBoard: False
       cmBoardDetail:
         fullSizeScreen: False
-        gameBoardSize: [20,20] # cm by cm (x,y)
-        actualScreenSize: [33,21] # cm by cm (x,y)
+        gameBoardSize: [20, 20] # cm by cm (x,y)
+        actualScreenSize: [33, 21] # cm by cm (x,y)
       targetsWord:
         # Healthy
         left: Left Hand
@@ -451,11 +449,11 @@ modules:
         # up: Legs
         # down: Still
 
-      targetsInfo:  # max is 1 (pos, size)
-        left : [[-0.8, 0  ], [0.4, 0.4]]   #   0 : left, #8cm away 4by4cm
-        right: [[ 0.8, 0  ], [0.4, 0.4]]   #   1 : right,
-        up   : [[ 0  , 0.8], [0.4, 0.4]]   #   2 : up,
-        down : [[ 0  ,-0.8], [0.4, 0.4]]   #   3 : down,
+      targetsInfo: # max is 1 (pos, size)
+        left: [[-0.8, 0], [0.4, 0.4]] #   0 : left, #8cm away 4by4cm
+        right: [[0.8, 0], [0.4, 0.4]] #   1 : right,
+        up: [[0, 0.8], [0.4, 0.4]] #   2 : up,
+        down: [[0, -0.8], [0.4, 0.4]] #   3 : down,
       defaultTargetSize: [0.4, 0.4]
 
       renderAngles:
@@ -469,22 +467,22 @@ modules:
         - 315
 
       target2state_task: # what number should state task use when it is using target
-        left : 0
+        left: 0
         right: 1
-        up   : 2
-        down : 3
-        still : 4
+        up: 2
+        down: 3
+        still: 4
         LU: 5
         LD: 6
         RU: 7
         RD: 8
-        ~ : -1 # None (when there is no target. [i.e stop] assign some number to state_task = -1)
-      decodedVel:  # max is 1
-        0 : [-1. ,  0]   #   0 : left
-        1 : [ 1. ,  0]   #   1 : right
-        2 : [ 0. ,  1]   #   2 : up
-        3 : [ 0. , -1]   #   3 : down
-        4 : [ 0. ,  0]   #   4 : still
+        ~: -1 # None (when there is no target. [i.e stop] assign some number to state_task = -1)
+      decodedVel: # max is 1
+        0: [-1., 0] #   0 : left
+        1: [1., 0] #   1 : right
+        2: [0., 1] #   2 : up
+        3: [0., -1] #   3 : down
+        4: [0., 0] #   4 : still
       holdTimeThres: 0.5 #0.5 # seconds
       graceTimeThres: 0.0 # seconds
       softmaxThres: 0.5
@@ -497,7 +495,7 @@ modules:
       skipFirstNtrials: 0
       showTextMetrics: ~ # 'b' for bitrate, 'a' for accuracy, else shows default
       showCountDown: True
-      softmaxStyle : normal
+      softmaxStyle: normal
       showSoftmax: False
       showHeatmap: False
       showStats: False
@@ -506,21 +504,21 @@ modules:
       showPredictedTarget: True
       showAllTarget: False
       centerCorrectTarget: False # 11-14 control 1a, 1b. Uses default if specified!!!
-      hideCursor: False         # 11-14 control: True
-      promptArrow: False         # 11-14 control 1a, 1b, 2: True
-      drawFixationCross: False  # 11-14 control 3: True
+      hideCursor: False # 11-14 control: True
+      promptArrow: False # 11-14 control 1a, 1b, 2: True
+      drawFixationCross: False # 11-14 control 3: True
       deltaPosScale: 1.0
       hideCom: True
       hideMass: True
-      yamlName : models/kf-4-directions-1D-gaze.yaml # ***
+      yamlName: models/kf-4-directions-1D-gaze.yaml # ***
       # copilot_path : SJtools/copilot/models/worthy-sunset-best
       # copilot_path : SJtools/copilot/models/keep/now-vd84j76i05/best_model #best so far
       #*
       #copilot_path : SJtools/copilot/models/keep/now-83zt724m45/best_model #large works well as well
-      
+
       # copilot_path : SJtools/copilot/models/keep/now-io90n0ct2d-4-11/best_model #dont want
       # copilot_path : SJtools/copilot/models/keep/now-no93hmz1re-8-11/best_model # need more work - need less reliant on double peak softmax
-      kfCopilotAlpha : 1.0 # 1: kf only, 0: copilot only
+      kfCopilotAlpha: 1.0 # 1: kf only, 0: copilot only
       enableKfSync: True # enables Kf to sync every trial
       enableKfAdapt: True # enables Kf to adapt every tick
       enableKfAdaptDelay: 1.0 # n-second delay until cursor starts moving and Kf starts adapting every trial
@@ -646,12 +644,12 @@ modules:
       connections:
         local:
           task:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7703
 std updated: 5.0
