--- a/models/templates/kf-8-directions-gaze-2.yaml
+++ b/models/templates/kf-8-directions-gaze-2.yaml
@@ -6,7 +6,7 @@ signals:
   timer_tick_time_ns:
     shape: 1
     dtype: int64
-  
+
   decoded_pos:
     shape: 2
     dtype: float32
@@ -14,7 +14,7 @@ signals:
   target_pos:
     shape: 2
     dtype: float32
-    
+
   target_size:
     shape: 2
     dtype: float32
@@ -26,17 +26,17 @@ signals:
   game_state:
     shape: 1 # use "shape: ()"?
     dtype: int8
-  
+
   # warning: this is a bipartite buffer.
   # indexing starts at ().shape[0] // 2
   eegbuffersignal:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
-  
+
   databuffer:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
-  
+
   # Index within eegbuffersignal to put new data,
   # NOT position of most recent data. Subtract 1 for most recent
   # Should never be less than half of eegbuffersignal.shape[0]
@@ -44,16 +44,16 @@ signals:
   eegbufferindex:
     shape: 1
     dtype: int16
-    
+
   v_decoded:
     shape: 2
     dtype: float32
-  
+
   # can be class probabilities or velocity
   decoder_output:
     shape: 5
     dtype: float32
-  
+
   # signals needed for decoder_hidden and kf_clda
   kf_state:
     shape: (7,)
@@ -137,11 +137,11 @@ signals:
   numEEGSamples:
     shape: 1
     dtype: int16
-    
+
   totalValidEEGSamples:
     shape: 1
     dtype: int64
-  
+
   # task variables to log
   sessionLength:
     shape: 1
@@ -194,7 +194,7 @@ signals:
   enableKfSyncInternal:
     shape: 1
     dtype: int8
-  
+
   gaze_buffer:
     shape: (600, 32)
     dtype: float64
@@ -214,7 +214,6 @@ group_params:
     params:
       # &dt reference is NECESSARY, otherwise it will be a silent bug in SJ-4-directions/kf-4-directions.
       dt: &dt_ 50000 # in microseconds
-    
 
 modules:
   # WARNING: make sure you have an exit condition when using loop: False
@@ -229,13 +228,13 @@ modules:
       connections:
         local: # connection_name. should only have 1. Not sure why this level is here.
           task: # stream_name
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7703
 
   timer:
@@ -277,9 +276,8 @@ modules:
       - totalValidEEGSamples
     trigger: False
     params:
-      IP: '127.0.0.1'
-      PORT: 7779
-  
+      serial_port: /dev/ttyUSB0
+
   filterEEG:
     constructor: True
     destructor: False
@@ -292,7 +290,7 @@ modules:
       - totalValidEEGSamples
     out:
       - databuffer
-      
+
   decoder_hidden:
     constructor: True
     sync:
@@ -317,7 +315,7 @@ modules:
       data_preprocessor:
         online_status: online
         normalizer_type: welfords
-  
+
   kf_clda:
     constructor: True
     destructor: True
@@ -405,7 +403,7 @@ modules:
       syncLength: 300 # seconds
       waitIntegerBlocks: True
       fullScreen: False
-      screenSize: [700,700] # w,h
+      screenSize: [700, 700] # w,h
       objScale: 0.001 # 1/1000
       cursorRadius: 10
       cursorVel: [0.03, 0.03] # max is 1 (0~1)
@@ -415,8 +413,9 @@ modules:
       useRandomTargetPos: False
 
       centerIn: True
-      enforceCenter: reset # True: repeat center target w/o changing cursor position. False: proceed to next outer target w/o changing cursor position.
-                           # reset: proceed to next outer target but reset cursor position to [0, 0].
+      enforceCenter:
+        reset # True: repeat center target w/o changing cursor position. False: proceed to next outer target w/o changing cursor position.
+        # reset: proceed to next outer target but reset cursor position to [0, 0].
       resetCursorPos: False
 
       randomTargetPosRadius: -1 # -1 means no range for radius
@@ -429,10 +428,10 @@ modules:
       useCmBoard: False
       cmBoardDetail:
         fullSizeScreen: False
-        gameBoardSize: [20,20] # cm by cm (x,y)
-        actualScreenSize: [33,21] # cm by cm (x,y)
+        gameBoardSize: [20, 20] # cm by cm (x,y)
+        actualScreenSize: [33, 21] # cm by cm (x,y)
       useCircleTargets: True
-      # max is 1. rectangle: ([posx, posy], [sizex, sizey]) OR circle: ([posx, posy], [diameter, IGNORED]) 
+      # max is 1. rectangle: ([posx, posy], [sizex, sizey]) OR circle: ([posx, posy], [diameter, IGNORED])
       # targetsInfo:  # max is 1 (pos, size)
       #   left : [[-0.8, 0  ], [0.30, 0.30]]   #   0 : left, #8cm away 6by6cm
       #   right: [[ 0.8, 0  ], [0.30, 0.30]]   #   1 : right,
@@ -442,35 +441,35 @@ modules:
       #   LD : [[ -0.5657, -0.5657], [0.30, 0.30]]   #   1 : right,
       #   RU : [[ 0.5657, 0.5657], [0.30, 0.30]]   #   2 : up,
       #   RD : [[ 0.5657,-0.5657], [0.30, 0.30]]   #   3 : down,
-      targetsInfo:  # max is 1 (pos, size)
-        left : [[-0.7, 0  ], [0.4, 0.4]]   #   0 : left, #8cm away 6by6cm
-        right: [[ 0.7, 0  ], [0.4, 0.4]]   #   1 : right,
-        up   : [[ 0  , 0.7], [0.4, 0.4]]   #   2 : up,
-        down : [[ 0  ,-0.7], [0.4, 0.4]]   #   3 : down,
-        LU : [[ -0.4950, 0.4950], [0.4, 0.4]]   #   0 : left,
-        LD : [[ -0.4950, -0.4950], [0.4, 0.4]]   #   1 : right,
-        RU : [[ 0.4950, 0.4950], [0.4, 0.4]]   #   2 : up,
-        RD : [[ 0.4950,-0.4950], [0.4, 0.4]]   #   3 : down,
+      targetsInfo: # max is 1 (pos, size)
+        left: [[-0.7, 0], [0.4, 0.4]] #   0 : left, #8cm away 6by6cm
+        right: [[0.7, 0], [0.4, 0.4]] #   1 : right,
+        up: [[0, 0.7], [0.4, 0.4]] #   2 : up,
+        down: [[0, -0.7], [0.4, 0.4]] #   3 : down,
+        LU: [[-0.4950, 0.4950], [0.4, 0.4]] #   0 : left,
+        LD: [[-0.4950, -0.4950], [0.4, 0.4]] #   1 : right,
+        RU: [[0.4950, 0.4950], [0.4, 0.4]] #   2 : up,
+        RD: [[0.4950, -0.4950], [0.4, 0.4]] #   3 : down,
         # still : "still"                       #   4 : still state (not stop state)
       defaultTargetSize: [0.4, 0.4]
 
       target2state_task: # what number should state task use when it is using target
-        left : 0
+        left: 0
         right: 1
-        up   : 2
-        down : 3
-        still : 4
+        up: 2
+        down: 3
+        still: 4
         LU: 5
         LD: 6
         RU: 7
         RD: 8
-        ~ : -1 # None (when there is no target. [i.e stop] assign some number to state_task = -1)
-      decodedVel:  # max is 1
-        0 : [-1. ,  0]   #   0 : left
-        1 : [ 1. ,  0]   #   1 : right
-        2 : [ 0. ,  1]   #   2 : up
-        3 : [ 0. , -1]   #   3 : down
-        4 : [ 0. ,  0]   #   4 : still
+        ~: -1 # None (when there is no target. [i.e stop] assign some number to state_task = -1)
+      decodedVel: # max is 1
+        0: [-1., 0] #   0 : left
+        1: [1., 0] #   1 : right
+        2: [0., 1] #   2 : up
+        3: [0., -1] #   3 : down
+        4: [0., 0] #   4 : still
       holdTimeThres: 0.5 # seconds
       graceTimeThres: 0.0 # seconds
       softmaxThres: 0.5
@@ -484,7 +483,7 @@ modules:
       numInitialEvaluationBlocks: 1
       showTextMetrics: ~ # 'b' for bitrate, 'a' for accuracy, else shows default
       showCountDown: True
-      softmaxStyle : normal
+      softmaxStyle: normal
       showSoftmax: False
       showHeatmap: False
       showStats: False
@@ -493,15 +492,15 @@ modules:
       showAllTarget: False
       hideCom: True
       hideMass: True
-      yamlName : models/kf-8-directions-gaze-2.yaml
-      unused_copilot_path1-0.8LSTM : SJtools/copilot/models/keep/charge/T8B_LSTM2_truedecay/best_model
-      unused_copilot_path2-0.8Traj : SJtools/copilot/models/keep/charge/T8B_temperature1/best_model
-      unused_copilot_path3-0.7LSTM : SJtools/copilot/models/keep/charge/T8B_LSTM2_truedecay_0.7/best_model
-      unused_copilot_path5-0.7Traj : SJtools/copilot/models/keep/charge/T8B_temperature1_0.7/best_model # ** uses center expressively (harder to escape edge)
-      unused_copilot_path4-0.7Traj : SJtools/copilot/models/keep/charge/T8B_temperature0.5_0.7/best_model # ** slow and steady accurate
+      yamlName: models/kf-8-directions-gaze-2.yaml
+      unused_copilot_path1-0.8LSTM: SJtools/copilot/models/keep/charge/T8B_LSTM2_truedecay/best_model
+      unused_copilot_path2-0.8Traj: SJtools/copilot/models/keep/charge/T8B_temperature1/best_model
+      unused_copilot_path3-0.7LSTM: SJtools/copilot/models/keep/charge/T8B_LSTM2_truedecay_0.7/best_model
+      unused_copilot_path5-0.7Traj: SJtools/copilot/models/keep/charge/T8B_temperature1_0.7/best_model # ** uses center expressively (harder to escape edge)
+      unused_copilot_path4-0.7Traj: SJtools/copilot/models/keep/charge/T8B_temperature0.5_0.7/best_model # ** slow and steady accurate
       # copilot_path : SJtools/copilot/models/keep/charge/T8B_LSTM2_truedecay/best_models
       copilot_kf_state: True
-      kfCopilotAlpha : 1.0 # 1: kf, 0: copilot 
+      kfCopilotAlpha: 1.0 # 1: kf, 0: copilot
       enableKfSync: True # enables Kf to sync every trial
       enableKfAdapt: True # enables Kf to adapt every tick
       enableKfAdaptDelay: 1.0 # 1 second delay until Kf starts adapting every trial
@@ -627,12 +626,12 @@ modules:
       connections:
         local:
           task:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: '127.0.0.1'
+            serial_port: /dev/ttyUSB0
             PORT: 7703
 std updated: 5.0
