--- a/models/replay_demo.yaml
+++ b/models/replay_demo.yaml
@@ -21,10 +21,10 @@ signals:
     shape: 1
     dtype: int8
   eegbuffersignal:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
   databuffer:
-    shape: (10000, 66)
+    shape: (1250, 17)
     dtype: float32
   eegbufferindex:
     shape: 1
@@ -191,13 +191,13 @@ modules:
       connections:
         local:
           task:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7703
   timer:
     constructor: true
@@ -220,7 +220,7 @@ modules:
       - gaze_buffer_idx
     trigger: false
     params:
-      IP: 127.0.0.1
+      serial_port: /dev/ttyUSB0
       PORT: 7780
   replay_eeg:
     name: replay
@@ -609,12 +609,12 @@ modules:
       connections:
         local:
           task:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7701
           eeg:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7702
           gaze:
-            IP: 127.0.0.1
+            serial_port: /dev/ttyUSB0
             PORT: 7703
 std updated: 5.0
