--- a/Offline_EEGNet/config.yaml
+++ b/Offline_EEGNet/config.yaml
@@ -3,16 +3,16 @@
 # ============================================
 
 # Must be run from Offline_EEGNet directory due to relative paths.
-data_dir:  ../data/raspy/                          # path to data pool.
-model_dir:  ../data/raspy/trained_models/          # path to store trained models.
-h5_dir: ../data/raspy/preprocessed_data/          # path to store preprocessed data.
+data_dir: ../data/raspy/ # path to data pool.
+model_dir: ../data/raspy/trained_models/ # path to store trained models.
+h5_dir: ../data/raspy/preprocessed_data/ # path to store preprocessed data.
 model_arch_dir: ./EEGNet.py
 
 data_names:
   - demo_decorr
 data_kinds:
   - OL
-train_on_server: False                           # if set to False, please change data_dir, model_dir, h5_dir correspondingly to your local paths.
+train_on_server: False # if set to False, please change data_dir, model_dir, h5_dir correspondingly to your local paths.
 device_id:
   - cpu
   #- 0
@@ -23,99 +23,33 @@ random_seed: ~
 # ============================================
 
 data_preprocessor:
-  eeg_cap_type: gel64               # from 'gel64', 'dry64', or 'saline64'.
-  sampling_frequency: 1000          # sampling frequency. Data recorded with ANT EEGO is 1000 Hz by default.
-  ch_to_drop:                       # channel names we want to drop.
-    - TRGR
-    - COUNT
-    - M1
-    - M2
-    - EOG
-    - Fp1 # row 1
-    - Fpz # row 1
-    - Fp2 # row 1
-    # - AF7 # row 2
-    # - AF3 # row 2
-    # - AF4 # row 2
-    # - AF8 # row 2
-    #- F7 # row 3
-    #- F8 # row 3
-    #- F5 # row 3
-    #- F6 # row 3
-    #- F3 # row 3
-    #- F1 # row 3
-    #- Fz # row 3
-    #- F2 # row 3
-    #- F4 # row 3
-    #- FT7 # row 4
-    #- FC5 # row 4
-    #- FC3 # row 4
-    #- FC1 # row 4
-    #- FCz # row 4
-    #- FC2 # row 4
-    #- FC4 # row 4
-    #- FC6 # row 4
-    #- FT8 # row 4
-    #- T7 # row 5
-    #- C5 # row 5
-    #- C3 # row 5
-    #- C1 # row 5
-    #- Cz # row 5
-    #- C2 # row 5
-    #- C4 # row 5
-    #- C6 # row 5
-    #- T8 # row 5
-    #- TP7 # row 6
-    #- CP5 # row 6
-    #- CP3 # row 6
-    #- CP1 # row 6
-    #- CP2 # row 6
-    #- CP4 # row 6
-    #- CP6 # row 6
-    #- TP8 # row 6
-    #- P7 # row 7
-    #- P5 # row 7
-    #- P3 # row 7
-    #- P1 # row 7
-    #- Pz # row 7
-    #- P2 # row 7
-    #- P4 # row 7
-    #- P6 # row 7
-    #- P8 # row 7
-    #- PO7 # row 8
-    #- PO5 # row 8
-    #- PO3 # row 8
-    #- POz # row 8
-    #- PO4 # row 8
-    #- PO6 # row 8
-    #- PO8 # row 8
-    #- O1 # row 9
-    #- Oz # row 9
-    #- O2 # row 9
+  eeg_cap_type: openbci16 # from 'gel64', 'dry64', or 'saline64'.
+  sampling_frequency: 125 # sampling frequency. Data recorded with ANT EEGO is 1000 Hz by default.
+  ch_to_drop: # channel names we want to drop.
 
   online_status: offline
-  normalizer_type: welfords         # If online experiment can be welfords or running_mean. Offline experiment_type ignores this setting
+  normalizer_type: welfords # If online experiment can be welfords or running_mean. Offline experiment_type ignores this setting
   bandpass_filter:
-    apply: False                    # whether bandpass filter is needed. (applied internally by raspy, setting it true will apply it second time)
-    lowcut: 4                       # the low pass band.
-    highcut: 40                     # the high pass band.
-    order: 3                        # the order of the filter.
+    apply: False # whether bandpass filter is needed. (applied internally by raspy, setting it true will apply it second time)
+    lowcut: 4 # the low pass band.
+    highcut: 40 # the high pass band.
+    order: 3 # the order of the filter.
   zero_center: False
-    
+
 labeling:
   labels_to_keep:
     - all
-  relabel_pairs:                    # used to simulate when tasks are remapped during closed loop experiments. For instance, in a closed loop experiment if the mental math task was used to move the cursor right in bci_raspy settings the label for that task in the closed loop data would be a 1 (the usual label for left), while in the training data it would be a 4 (the usual label for math). To correct for this, pass 1, 4 into relabel pairs, so that task labels of 1 in the test dataset will be reassigned to be 4 (to match the corresponding training data).
-    - ~                             
+  relabel_pairs: # used to simulate when tasks are remapped during closed loop experiments. For instance, in a closed loop experiment if the mental math task was used to move the cursor right in bci_raspy settings the label for that task in the closed loop data would be a 1 (the usual label for left), while in the training data it would be a 4 (the usual label for math). To correct for this, pass 1, 4 into relabel pairs, so that task labels of 1 in the test dataset will be reassigned to be 4 (to match the corresponding training data).
+    - ~
 
 artifact_handling:
-  detect_artifacts: False            # Whether to detect and discard artifacts
-  reject_std: 5.5                   # number of standard deviations to allow each channel to vary by. If any data points in a window exceed this threshold, the window will be marked as containing an artifact.
+  detect_artifacts: False # Whether to detect and discard artifacts
+  reject_std: 5.5 # number of standard deviations to allow each channel to vary by. If any data points in a window exceed this threshold, the window will be marked as containing an artifact.
 
 dataset_generator:
   # SEE USAGE EXAMPLES BELOW
   dataset_operation:
-    relabel: False        # if False, check selected_labels to select a subset of labels; if True, check mapped_labels to tell it how you want to relabel it.
+    relabel: False # if False, check selected_labels to select a subset of labels; if True, check mapped_labels to tell it how you want to relabel it.
     selected_labels:
       - 0
       - 1
@@ -131,26 +65,25 @@ dataset_generator:
       class3:
         - 3
 
-  first_ms_to_drop: 1000                      # time in ms dropped from each trial which has less useful information at the beginning.
-  window_length: &window_length_ 1000         # the time window in ms of data in each step during training. This is used to remove trials that are too short.
+  first_ms_to_drop: 125 # time in samples dropped from each trial which has less useful information at the beginning.
+  window_length: &window_length_ 125 # the time window in samples of data in each step during training. This is used to remove trials that are too short.
   omit_angles: 10
 
 partition:
-  num_folds: &num_folds_ 5                    # the number of fold in k-fold validation.
+  num_folds: &num_folds_ 5 # the number of fold in k-fold validation.
 
 augmentation:
-  window_length: *window_length_              # the time window of data in each step during training.
-  stride: 99                                  # the stride of the window to slide.
-  new_sampling_frequency: &new_s_f_ 100       # the sampling frequency to downsample to for 1s data.
-  num_noise: 4                                # the number of noise windows to add to one original data window.
-
+  window_length: *window_length_ # the time window of data in each step during training.
+  stride: 12 # the stride of the window to slide.
+  new_sampling_frequency: &new_s_f_ 100 # the sampling frequency to downsample to for 1s data.
+  num_noise: 4 # the number of noise windows to add to one original data window.
 
 # ========== Usage Example ==========
 #   relabel: bool
 #     If True, check mapped_labels.
 #               It will relabel labels based on what assigned in mapped_labels.
 #     If False, check selected_labels.
-#               That means no label needs to be adjusted. Follow the original labels in data and do classification. 
+#               That means no label needs to be adjusted. Follow the original labels in data and do classification.
 #               It supports to select a subset of all labels by selected_labels. If using all labels, make sure you set it to cover all labels.
 #               For multiple data inputs, it will combine data with the same label from all datasets.
 
@@ -198,7 +131,7 @@ augmentation:
 #             - ~
 #             - 4
 #       ----------
-#       Example 3: Train on three data, each of which contains same labels, but here we want to check the difference between the left trials from the first and the second dataset. 
+#       Example 3: Train on three data, each of which contains same labels, but here we want to check the difference between the left trials from the first and the second dataset.
 #                   So we treat them as different classes: (left:0, right:1), (left:0, right:1).
 #         relabel: True
 #         selected_labels: (you can leave anything here since the script won't check as long as relabel is True)
@@ -217,15 +150,11 @@ augmentation:
 #             - 0
 # ===================================
 
-
-
 # ============================================
 # ========  Parameters for Raspy    ==========
 # ============================================
 
-#PICK UP WORK HERE NEED TO UNIFY WITH RASPY CONFIG FILE 
-
-
+#PICK UP WORK HERE NEED TO UNIFY WITH RASPY CONFIG FILE
 
 # ============================================
 # ========  Parameters for Training   ========
@@ -281,9 +210,9 @@ model:
 
   block2:
     # SeparableConv2D
-    sep_conv: [1, 16]                   # set to 8 if window_length < 1000
+    sep_conv: [1, 16] # set to 8 if window_length < 1000
     # AveragePool2D layer
-    avg_pool: [1, 16]                   # set to 4 if window_length < 1000; 1 if < 500.
+    avg_pool: [1, 16] # set to 4 if window_length < 1000; 1 if < 500.
     # Dropout layer
     dropout: 0.5
     # Dense
