Open-loop text (OpenBCI): - Fix SJ_text action mapping to match testedAction (Left/Right/Both/Feet) - Add null:-1 to handle stop phase safely - Add previewTimeThres/textVelScale params - Set timer dt=20000 to match 20 ms SJ tick

--- a/models/exp/open_loop_text_cyton.yaml
+++ b/models/exp/open_loop_text_cyton.yaml
@@ -75,7 +75,7 @@ modules:
       - timer_tick_time_ns
     params:
       timer_type: sleep
-      dt: 50000
+      dt: 20000
       verbose: true
 
   UpdateEEG:
@@ -158,6 +158,8 @@ modules:
       cursorRadius: 0
       cursorVel: [0.015, 0.015]
       styleChange: false
+      previewTimeThres: 0.0
+      textVelScale: 0.0
       skipFirstNtrials: 1
       resetCursorPos: true
       decodedVel:
@@ -179,11 +181,18 @@ modules:
         - Both Hands
         - Feet
       action2state_task:
+        # Primary labels used by the text prompts (must match testedAction)
+        Left Hand: 0
+        Right Hand: 1
+        Both Hands: 2
+        Feet: 3
+        still: 4
+        null: -1
+        # Optional aliases (kept for flexibility if prompts change)
         left: 0
         right: 1
         up: 2
         down: 3
-        still: 4
 
   logger:
     constructor: true
@@ -230,4 +239,3 @@ modules:
           eeg:
             IP: '127.0.0.1'
             PORT: 7702
-
